RESOLVED FIXED 256393
[PlayStation] Fix build after 263601@main
https://bugs.webkit.org/show_bug.cgi?id=256393
Summary [PlayStation] Fix build after 263601@main
Basuke Suzuki
Reported 2023-05-05 14:08:13 PDT
In file included from C:/PSDev/webkit/WebKitBuild/Release/JavaScriptCore/DerivedSources/unified-sources/UnifiedSource-ee8a7a7a-4.cpp:8: In file included from C:/PSDev/webkit/Source/JavaScriptCore\heap/IncrementalSweeper.cpp:40: In file included from C:/PSDev/webkit/WebKitBuild/Release/bmalloc/Headers\bmalloc/pas_thread_local_cache.h:38: In file included from C:/PSDev/webkit/WebKitBuild/Release/bmalloc/Headers\bmalloc/pas_malloc_stack_logging.h:32: In file included from C:/PSDev/webkit/WebKitBuild/Release/bmalloc/Headers\bmalloc/pas_root.h:29: In file included from C:/PSDev/webkit/WebKitBuild/Release/bmalloc/Headers\bmalloc/pas_heap.h:32: In file included from C:/PSDev/webkit/WebKitBuild/Release/bmalloc/Headers\bmalloc/pas_segregated_heap.h:45: C:/PSDev/webkit/WebKitBuild/Release/bmalloc/Headers\bmalloc/pas_segregated_page.h:365:12: error: cast from 'pas_page_base *' to 'pas_segregated_page *' increases required alignment from 1 to 16 [-Werror,-Wcast-align] 1 error generated.
Attachments
EWS
Comment 1 2023-05-05 16:23:18 PDT
Committed 263739@main (6c0f1ca12c20): <https://commits.webkit.org/263739@main> Reviewed commits have been landed. Closing PR #13517 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2023-05-05 16:24:21 PDT
Michael Catanzaro
Comment 3 2023-05-08 08:35:59 PDT
BTW, suppressing -Wcast-align indicates a bug in the code. I found some Linux kernel documentation at https://www.kernel.org/doc/Documentation/unaligned-memory-access.txt. Depending on architecture, this may result in (a) performance penalty, or (b) incorrect code generation.
Note You need to log in before you can comment on or make changes to this bug.