[PlayStation] Fix build after 263601@main https://bugs.webkit.org/show_bug.cgi?id=256393

Reviewed by Yusuke Suzuki.

While libpas header file is used outside bmalloc, casting from 'pas_page_base *' to
'pas_segregated_page *' generates warning (-Wcast-align).

* Source/bmalloc/libpas/src/libpas/pas_segregated_page.h:

Canonical link: https://commits.webkit.org/263739@main